{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 127,
  "lineage": "cd02b67e-1ea0-a432-05a4-26ff1f02168e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06c3254d99b7c0139",
            "arn": "arn:aws:ec2:us-east-1:606992080626:instance/i-0ef750550e5234ce5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "chall-ec2-ssm-instance-profile",
            "id": "i-0ef750550e5234ce5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07c955c8407181ab5"
              }
            ],
            "primary_network_interface_id": "eni-07c955c8407181ab5",
            "private_dns": "ip-10-10-1-120.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.120",
            "public_dns": "ec2-54-90-159-189.compute-1.amazonaws.com",
            "public_ip": "54.90.159.189",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03c35a7c77dcba5d6",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0507c34569b70fe43",
            "tags": {
              "Name": "chall-ec2-web",
              "Role": "web"
            },
            "tags_all": {
              "Name": "chall-ec2-web",
              "Role": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-094e6e5436e9632af"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "606992080626",
            "id": "i-0ef750550e5234ce5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:606992080626:internet-gateway/igw-07b44d259b77f8482",
            "id": "igw-07b44d259b77f8482",
            "owner_id": "606992080626",
            "region": "us-east-1",
            "tags": {
              "Name": "chall-igw"
            },
            "tags_all": {
              "Name": "chall-igw"
            },
            "vpc_id": "vpc-077086d5f71392be7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:606992080626:route-table/rtb-03a78ce9089454cad",
            "id": "rtb-03a78ce9089454cad",
            "owner_id": "606992080626",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b44d259b77f8482",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chall-rt-public"
            },
            "tags_all": {
              "Name": "chall-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-077086d5f71392be7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "606992080626",
            "id": "rtb-03a78ce9089454cad",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e85f4c1c1c14191",
            "region": "us-east-1",
            "route_table_id": "rtb-03a78ce9089454cad",
            "subnet_id": "subnet-0507c34569b70fe43"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:606992080626:security-group/sg-094e6e5436e9632af",
            "description": "Allow HTTP only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094e6e5436e9632af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "chall-web-sg",
            "name_prefix": "",
            "owner_id": "606992080626",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chall-web-sg"
            },
            "tags_all": {
              "Name": "chall-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-077086d5f71392be7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "606992080626",
            "id": "sg-094e6e5436e9632af",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:606992080626:subnet/subnet-0507c34569b70fe43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0507c34569b70fe43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "606992080626",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "chall-public-subnet"
            },
            "tags_all": {
              "Name": "chall-public-subnet"
            },
            "vpc_id": "vpc-077086d5f71392be7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "606992080626",
            "id": "subnet-0507c34569b70fe43",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:606992080626:vpc/vpc-077086d5f71392be7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0634c0f7699aca393",
            "default_route_table_id": "rtb-0fba7a751d8b69bb0",
            "default_security_group_id": "sg-0b8d02d141dbf6e55",
            "dhcp_options_id": "dopt-04cde88ac38887cc4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-077086d5f71392be7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fba7a751d8b69bb0",
            "owner_id": "606992080626",
            "region": "us-east-1",
            "tags": {
              "Name": "chall-vpc"
            },
            "tags_all": {
              "Name": "chall-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}